# iv-semgrep

./: .pre-commt-hooks.yaml  Makefile  README.md  iv_semgrep.py  pyproject.toml
.github/workflows/: build.yaml  run-tests.yaml
rules/: abstract-method-raise-not-implemented.yaml  classmethod-factories.yaml  else-block.yaml  empty-collection-type-hint.yaml  os-path-is-forbidden.yaml  prefer-using-comprehensons.yaml  raw-open-call.yaml  silent-exception-suppression.yaml  timezone-must-be-specified.yaml
tests/: abstract-method-raise-not-implemented.py  classmethod-factories.py  else-block.py  empty-collection-type-hint.py  os-path-is-forbidden.py  prefer-using-comprehensons.py  raw-open-call.py  silent-exception-suppression.py  timezone-must-be-specified.py
