[tool.poetry]
name = "semgrep-rules"
version = "0.1.0"
description = "My own semgrep rules"
authors = ["DOCtorActoAntohich <fairy666death@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
semgrep = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
